# work

./: Makefile
CMakeListdemo/: CMakeLists.txt
CMakeListdemo/func/: CMakeLists.txt  func.cpp
CMakeListdemo/include/: func.hpp
CMakeListdemo/src/: CMakeLists.txt  main.cpp
sqlite/: Makefile  demo  faceID.db
sqlite/src/: main.c
